# Project-AMTA

./: .gitignore  CMakeLists.txt  imgui.ini  readme.md
data/: notifications.tsv  orders.tsv  products.tsv  reviews.tsv  users.tsv
src/: CMakeLists.txt  main.cpp
src/core/: admin.cpp  admin.h  app.cpp  app.h  database.cpp  database.h  dealer.cpp  dealer.h  notification.cpp  notification.h  order.cpp  order.h  product.cpp  product.h  retailer.cpp  retailer.h  review.cpp  review.h  search_engine.cpp  search_engine.h  user.cpp  user.h
src/gui/: gui.cpp  gui.h
